--- a/components/project-info/project-info.component.html
+++ b/components/project-info/project-info.component.html
@@ -3,3 +3,4 @@
 <link rel="import" href="project-info-item.component.html">
 <link rel="import" href="sidebar-text.component.html">
 <link rel="import" href="tree-item.component.html">
+<link rel="import" href="string-element.component.html">
