--- a/components/project-info/tree-item.component.html
+++ b/components/project-info/tree-item.component.html
@@ -26,10 +26,12 @@
     
     .tree-item__level-2 {
         font: 13px/24px globerregular;
+        border-bottom: 1px dotted #D6D6D6;
     }
     
     .tree-item__level-3 {
         font: 12px/24px globerregular;
+        border-bottom: 1px dotted #D6D6D6;
     }
 </style>
 
