--- a/components/alg-test/index.html
+++ b/components/alg-test/index.html
@@ -19,7 +19,7 @@
     <div>10</div>
 
 
-    <button>TEST</button>
+    <button id="button">TEST</button>
 </body>
 
 <script src="script.js"></script>
