--- a/components/alg-test/index.html
+++ b/components/alg-test/index.html
@@ -7,8 +7,17 @@
 </head>
 
 <body>
-    <div>1</div>
-    <div>2</div>
+
+    <style>
+        .elem {
+            background-color: red;
+        }
+    </style>
+
+
+
+    <div class="elem">1</div>
+    <div class="elem">2</div>
     <div>3</div>
     <div>4</div>
     <div>5</div>
