--- a/components/kanban/kanban-desk.component.html
+++ b/components/kanban/kanban-desk.component.html
@@ -1,5 +1,11 @@
 <link rel="import" href="sprint-header.component.html">
 <link rel="import" href="person-tasks-wrapp.component.html">
+<link rel="import" href="kanban-card-wrapp.component.html">
+<link rel="import" href="todo-wrapp.component.html">
+<link rel="import" href="doing-wrapp.component.html">
+<link rel="import" href="review-wrapp.component.html">
+<link rel="import" href="done-wrapp.component.html">
+<link rel="import" href="sprint-stage.component.html">
 <!-- Style CSS-->
 <style>
 
@@ -10,14 +16,15 @@
         display: -o-flex;
         display: flex;
         padding-left: 12px;
-        padding-right: 12px;
-        width: 100%;
-        background-color: #fff;
+/*        padding-right: 12px;*/
+        padding-bottom: 35px;
+        background-color: #E0F0F8;
         -webkit-flex-direction: column;
         -moz-flex-direction: column;
         -ms-flex-direction: column;
         -o-flex-direction: column;
         flex-direction: column;
+
     }
 </style>
 
