--- a/components/kanban/sprint-header.component.html
+++ b/components/kanban/sprint-header.component.html
@@ -40,6 +40,7 @@
         constructor() {
             super()
             this.appendChild(SprintHeaderTemplate.content.cloneNode(true));
+            console.log(this);
         }
 
         connectedCallback() {
